<resources>
    <string name="app_name">Ahorromóvil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Header -->
    <string name="txv_bienvenida_header">AHORROMÓVIL</string>
    <string name="txv_nombre_header">¡Disfruta la experiencia!</string>
    <string name="txv_usuario_header">Made by Laisha Riestra, Rafael Magaña and Sofia Rojas</string>

    <!-- Menu -->
    <string name="title_movimientos">Movimientos</string>
    <string name="title_otros">Otros</string>
    <string name="menu_pagos">Pagos</string>
    <string name="menu_ahorros">Ahorros</string>
    <string name="menu_inversiones">Inversiones</string>
    <string name="menu_gastos">Gastos</string>
    <string name="menu_ingresos">Ingresos</string>
    <string name="menu_logros">Logros</string>
    <string name="menu_salir">Salir</string>

    <!-- Login -->
    <string name="titulo_login">Inicio de sesión</string>
    <string name="edt_usuario_login">Escribe tu usuario</string>
    <string name="edt_contrasenna_login">Escribe tu conrtraseña</string>
    <string name="chb_guardar">Guardar datos de inicio de sesión</string>
    <string name="btn_ingresar">INICIAR</string>
    <string name="txv_no_cuenta">¿No tienes una cuenta?</string>
    <string name="btn_registrar_login">¡REGISTRATE!</string>

    <!-- Registro -->
    <string name="titulo_registro">¡Regístrate!</string>
    <string name="edt_nombre_registro">Escribe tu nombre</string>
    <string name="edt_apellido_registro">Escribe tu apellido</string>
    <string name="edt_edad_registro">Escribe tu edad</string>
    <string-array name="spn_sexo_registro">
        <item>Seleccione...</item>
        <item>Femenino</item>
        <item>Masculino</item>
    </string-array>
    <string name="edt_usuario_registro">Escribe tu nombre de usuario</string>
    <string name="edt_contrasenna_registro">Escribe tu contraseña</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="btn_regresar">Regresar</string>

    <!-- Mostrar ahorros -->
    <string name="titulo_ahorros">Ahorros registrados</string>
    <string name="txv_ahorros">Aquí aparecerán tus ahorros registrados</string>

    <!-- Mostrar gastos -->
    <string name="titulo_gastos">Gastos registrados</string>
    <string name="txv_gastos">Aquí aparecerán tus gastos registrados</string>

    <!-- Mostrar ingresos -->
    <string name="titulo_ingresos">Ingresos registrados</string>
    <string name="txv_ingresos">Aquí aparecerán tus ingresos registrados</string>

    <!-- Mostrar inversiones -->
    <string name="titulo_inversiones">Inversiones registradas</string>
    <string name="txv_inversiones">Aquí aparecerán tus inversiones registradas</string>

    <!-- Mostrar pagos -->
    <string name="titulo_pagos">Pagos registrados</string>
    <string name="txv_pagos">Aquí aparecerán tus pagos registrados</string>

    <!-- Fragment inversiones -->
    <string-array name="spn_riesgos">
        <item>Seleccione...</item>
        <item>Bajo</item>
        <item>Medio</item>
        <item>Alto</item>
    </string-array>
</resources>