<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_pagos">

    <fragment
        android:id="@+id/nav_pagos"
        android:name="com.example.proyectoahorromovil.Fragments.PagosFragment"
        android:label="@string/menu_pagos"
        tools:layout="@layout/fragment_pagos" />

    <fragment
        android:id="@+id/nav_ahorros"
        android:name="com.example.proyectoahorromovil.Fragments.AhorrosFragment"
        android:label="@string/menu_ahorros"
        tools:layout="@layout/fragment_ahorros" />

    <fragment
        android:id="@+id/nav_inversiones"
        android:name="com.example.proyectoahorromovil.Fragments.InversionesFragment"
        android:label="@string/menu_inversiones"
        tools:layout="@layout/fragment_inversiones" />

    <fragment
        android:id="@+id/nav_gastos"
        android:name="com.example.proyectoahorromovil.Fragments.GastosFragment"
        android:label="@string/menu_gastos"
        tools:layout="@layout/fragment_gastos" />

    <fragment
        android:id="@+id/nav_ingresos"
        android:name="com.example.proyectoahorromovil.Fragments.IngresosFragment"
        android:label="@string/menu_ingresos"
        tools:layout="@layout/fragment_ingresos" />

    <activity
        android:id="@+id/nav_login"
        android:name="com.example.proyectoahorromovil.LoginActivity"
        android:label="@string/titulo_login"
        tools:layout="@layout/activity_login" />

    <fragment
        android:id="@+id/nav_logros"
        android:name="com.example.proyectoahorromovil.Fragments.Awards.LogrosFragment"
        android:label="@string/menu_logros"
        tools:layout="@layout/fragment_logros" />

</navigation>