<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/header_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round"/>

        <TextView
            android:id="@+id/txv_bienvenida_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txv_bienvenida_header"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txv_nombre_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txv_nombre_header"
            android:textSize="16dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/txv_usuario_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txv_usuario_header"
            android:textColor="#B3FFFFFF"
            android:textSize="12dp" />

    </LinearLayout>
</LinearLayout>